Next release
============

Bug Fixes
---------

- 1.2b4 introduced a bug whereby views added via a route configuration
  that named a view callable and also a ``view_attr`` became broken.
  Symptom: ``MyViewClass is not callable`` or the ``__call__`` of a
  class was being called instead of the method named via
  ``view_attr``.

1.2b4 (2010-02-03)
==================

Documentation
-------------

- Update GAE tutorial to use Chameleon instead of Jinja2 (now that
  it's possible).

Bug Fixes
---------

- Ensure that ``secure`` flag for AuthTktAuthenticationPolicy
  constructor does what it's documented to do (merge Daniel Holth's
  fancy-cookies-2 branch).

Features
--------

- Add ``path`` and ``http_only`` options to
  AuthTktAuthenticationPolicy constructor (merge Daniel Holth's
  fancy-cookies-2 branch).

Backwards Incompatibilities
---------------------------

- Remove ``view_header``, ``view_accept``, ``view_xhr``,
  ``view_path_info``, ``view_request_method``, ``view_request_param``,
  and ``view_containment`` predicate arguments from the
  ``Configurator.add_route`` argument list.  These arguments were
  speculative.  If you need the features exposed by these arguments,
  add a view associated with a route using the ``route_name`` argument
  to the ``add_view`` method instead.

- Remove ``view_header``, ``view_accept``, ``view_xhr``,
  ``view_path_info``, ``view_request_method``, ``view_request_param``,
  and ``view_containment`` predicate arguments from the ``route`` ZCML
  directive attribute set.  These attributes were speculative.  If you
  need the features exposed by these attributes, add a view associated
  with a route using the ``route_name`` attribute of the ``view`` ZCML
  directive instead.

Dependencies
------------

- Remove dependency on ``sourcecodegen`` (not depended upon by
  Chameleon 1.1.1+).

1.2b3 (2010-01-24)
==================

Bug Fixes
---------

- When "hybrid mode" (both traversal and urldispatch) is in use,